# lochstep

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: rust.yml
src/: config.rs  constants.rs  controllers.rs  errors.rs  main.rs  models.rs  routes.rs  state.rs  tests.rs  views.rs
src/controllers/: auth.rs  mod.rs  proposals.rs
src/controllers/auth/: passkey_auth.rs
src/models/: db.rs  keys.rs  migrations.rs  mod.rs  passwords.rs  proposals.rs  users.rs
src/models/db/: add_key.sql  create_user.sql  db.sqlite  schema.sql  update_user_password.sql
src/models/db/migrations/: 0_init.sql
src/models/migrations/: queries.rs
src/routes/: mod.rs  proposals.rs  router.rs
src/ui/static/scripts/: register.js
src/ui/templates/: base.html  homepage.html  login.html  login_success.html
src/ui/templates/components/: complete-registration.html
src/views/: mod.rs
ui/static/scripts/: register.js
ui/static/styles/: main.css  register.css
ui/templates/: base.html  homepage.html  login.html
