[package]
edition = "2021"
name = "coworker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["json", "headers", "http2", "macros"]}
axum-sessions = "0.5.0"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
rusqlite = {version = "0.29.0", features = ["uuid"]}
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
simple_logger = "4.2.0"
tera = "1.19.0"
tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}
tokio-rusqlite = "0.4.0"
tower-http = {version = "0.4.1", features = ["fs"]}
uuid = {version = "1.4.0", features = ["serde"]}
webauthn-rs = {version = "0.4.8", features = ["danger-allow-state-serialisation"]}
