[package]
edition = "2021"
name = "lochstep"
publish = false
version = "0.1.0"

[features]
default = []
passkey = ["dep:webauthn-rs"]

[dependencies]
anyhow = "1.0.72"
argon2 = "0.5.1"
axum = {version = "0.6.18", features = ["json", "headers", "http2", "macros"]}
axum-sessions = "0.5.0"
dotenv = "0.15.0"
glob = "0.3.1"
http = "0.2.9"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
simple_logger = "4.2.0"
tera = "1"
tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.4.1", features = ["fs"]}
url = "2.4.0"
uuid = {version = "1.4.0", features = ["serde", "v8", "v4"]}
webauthn-rs = {version = "0.4.8", features = ["danger-credential-internals", "danger-allow-state-serialisation"], optional = true}

[dependencies.axum-login-libsql]
branch = "impl/libsql_client"
git = "https://github.com/DrewMcArthur/axum-login"

[dependencies.libsql-client]
branch = "chore/dep-up"
default-features = false
features = ["bytes", "http", "reqwest", "reqwest_backend", "local_backend", "mapping_names_to_values_in_rows"]
git = "https://github.com/Suyashtnt/libsql-client-rs"

[dev-dependencies]
tower = "0.4.13"
